[gd_scene load_steps=5 format=2]

[ext_resource path="res://Interface/Scripts/SettingsWindowGeneral.gd" type="Script" id=1]
[ext_resource path="res://Interface/CheckToggle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Interface/Themes/default_theme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxEmpty" id=2197]

[node name="SettingsWindowGeneral" type="MarginContainer"]
margin_right = 243.0
margin_bottom = 129.0
theme = ExtResource( 3 )
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 278.0
margin_bottom = 169.0
custom_constants/separation = 20

[node name="Grid" type="GridContainer" parent="VBox"]
margin_right = 258.0
margin_bottom = 110.0
custom_constants/vseparation = 10
custom_constants/hseparation = 20
columns = 2

[node name="Label" type="Label" parent="VBox/Grid"]
self_modulate = Color( 1, 0.92549, 0.839216, 1 )
margin_top = 1.0
margin_right = 178.0
margin_bottom = 19.0
text = "Invert zoom scroll"

[node name="InvertScroll" parent="VBox/Grid" instance=ExtResource( 2 )]
margin_left = 198.0
margin_right = 258.0
custom_styles/panel = SubResource( 2197 )
show_label_left = true

[node name="Label2" type="Label" parent="VBox/Grid"]
self_modulate = Color( 1, 0.92549, 0.839216, 1 )
margin_top = 31.0
margin_right = 178.0
margin_bottom = 49.0
text = "Invert resize scroll"

[node name="InvertResize" parent="VBox/Grid" instance=ExtResource( 2 )]
margin_left = 198.0
margin_top = 30.0
margin_right = 258.0
margin_bottom = 50.0
custom_styles/panel = SubResource( 2197 )
show_label_left = true

[node name="Label3" type="Label" parent="VBox/Grid"]
self_modulate = Color( 1, 0.92549, 0.839216, 1 )
margin_top = 61.0
margin_right = 178.0
margin_bottom = 79.0
hint_tooltip = "Locked dice can move, but not rotate"
mouse_filter = 1
mouse_default_cursor_shape = 16
text = "Allow locked dice to move"

[node name="AllowLockedMove" parent="VBox/Grid" instance=ExtResource( 2 )]
margin_left = 198.0
margin_top = 60.0
margin_right = 258.0
margin_bottom = 80.0
custom_styles/panel = SubResource( 2197 )
show_label_left = true

[node name="Label4" type="Label" parent="VBox/Grid"]
self_modulate = Color( 1, 0.92549, 0.839216, 1 )
margin_top = 91.0
margin_right = 178.0
margin_bottom = 109.0
hint_tooltip = "Locked dice can move, but not rotate"
mouse_filter = 1
mouse_default_cursor_shape = 16
text = "Show unrolled sides"

[node name="ShowUnrolled" parent="VBox/Grid" instance=ExtResource( 2 )]
margin_left = 198.0
margin_top = 90.0
margin_right = 258.0
margin_bottom = 110.0
custom_styles/panel = SubResource( 2197 )
show_label_left = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBox"]
margin_top = 130.0
margin_right = 258.0
margin_bottom = 149.0
custom_constants/separation = 50

[node name="Label3" type="Label" parent="VBox/HBoxContainer"]
self_modulate = Color( 1, 0.92549, 0.839216, 1 )
margin_right = 46.0
margin_bottom = 18.0
text = "Gravity"

[node name="Gravity" type="HSlider" parent="VBox/HBoxContainer"]
margin_left = 96.0
margin_right = 258.0
margin_bottom = 19.0
size_flags_horizontal = 3
min_value = 2.0
max_value = 6.0
value = 4.0
rounded = true
ticks_on_borders = true

[connection signal="toggled" from="VBox/Grid/InvertScroll" to="." method="_on_InvertScroll_toggled"]
[connection signal="toggled" from="VBox/Grid/InvertResize" to="." method="_on_InvertResize_toggled"]
[connection signal="toggled" from="VBox/Grid/AllowLockedMove" to="." method="_on_AllowLockedMove_toggled"]
[connection signal="toggled" from="VBox/Grid/ShowUnrolled" to="." method="_on_ShowUnrolled_toggled"]
[connection signal="value_changed" from="VBox/HBoxContainer/Gravity" to="." method="_on_Gravity_value_changed"]
